styles/style.css
body {
    font-family: Arial, sans-serif;
    margin: 40px;
}

h1 {
    color: #333;
}

.pictureGrid {
    flex-grow: 1;
    display: grid;
    width: 60%;
    justify-content: center;
    align-items: center;
    margin: auto;
    grid-template-columns: repeat(2, 1fr);
    gap: 10px;
    padding: 20px;
}

.container {
    max-width: 600px;
    margin: auto;
    background: #ebecef;
    padding: 20px;
    border-radius: 8px;
}

img {
    max-width: 100%;
    height: auto;
    display: block; /* initially show image */
}

.buttons-container {
    margin: auto;
    width: 10%;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding: 20px;
}

.image-container {
    position: relative;
    overflow: hidden;
}

.image-container img {
    width: 100%;
    height: auto;
    transition: transform 0.5s ease, filter 0.5s ease;
}

.image-container:hover img {
    filter: brightness(50%);
    transform: scale(1.1);
}

.image-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-align: center;
    visibility: hidden;
    transition: visibility 0.5s ease;
}

.image-container:hover .image-text {
    visibility: visible;
}

